--- a/css/style.css
+++ b/css/style.css
@@ -1082,17 +1082,12 @@ footer
 
 {
 
-    position:relative;
-
-    float:left;
-
-    margin: auto;
-
-    width: 100%;
-
-    height: 28px;
-
-    overflow:hidden;
+    float: left;
+    height: 32px;
+    margin: -10px auto 0;
+    overflow: hidden;
+    position: relative;
+    width: 82%;
 
 }
 
@@ -6318,7 +6313,23 @@ h2{
 
 }
 
-.columns-preview-description p, .columns-preview-description span
+.columns-preview-description p{
+
+	float:left;
+
+	font-family:CBold;
+
+	font-weight: normal;
+
+	font-size:22px;
+
+	color:#C8031C;
+
+    text-align:left;
+     width: 515px;
+}
+
+ .columns-preview-description span
 
 {
 
@@ -8465,4 +8476,28 @@ tururu
 
 .titulo{
 	margin-top: -218%;
+}
+
+.links{
+	text-decoration: none; font-size:18px;color: #FFF;
+	font-family: CRegular;
+}
+.links span
+{
+	text-decoration: none; font-size:18px;color: #FFF;
+	font-family: CRegular;
+}
+
+.links a{
+	text-decoration: none; font-size:18px; color: #FFF; 
+	font-family: CRegular;
+}
+.links a:visited{
+	text-decoration: none; font-size:18px; color: #FFF; 
+	font-family: CRegular;
+}
+.title{
+	font-family: CBold;
+	font-size: 16px;
+	color: #C8031C;
 }
